@@ -1,13 +1,14 @@
 package com.gtv2stream;
 
 import android.accessibilityservice.AccessibilityService;
+import android.content.Intent;
 import android.os.Handler;
 import android.os.Looper;
+import android.os.SystemClock;
 import android.util.Log;
 import android.content.pm.PackageManager;
 import android.view.accessibility.AccessibilityEvent;
 import android.view.accessibility.AccessibilityNodeInfo;
-import android.view.accessibility.AccessibilityWindowInfo;
 import android.widget.Toast;
 
 import java.util.ArrayList;
@@ -24,7 +25,7 @@ import java.util.concurrent.Executors;
  * to the selected YouTube app; all other titles resolve through TMDB and open in
  * the selected film/series app.
  */
-public final class TvRecommendationService extends AccessibilityService {
+public class TvRecommendationService extends AccessibilityService {
     private static final String TAG = "GTV2STREAM";
     private static final String LAUNCHER_PACKAGE = "com.google.android.apps.tv.launcherx";
     private static final String STOCK_YOUTUBE_PACKAGE = "com.google.android.youtube.tv";
@@ -37,8 +38,6 @@ public final class TvRecommendationService extends AccessibilityService {
     private static final long DUPLICATE_WINDOW_MS = 2000L;
     /** Freshness window for focused-card provider context (focus -> detail dispatch). */
     private static final long FOCUSED_HERO_WINDOW_MS = 15000L;
-    /** Build identifier, logged on connect so a test run can name its own APK. */
-    private static final String BUILD_STAMP = "shangchi-1";
 
     private final ExecutorService worker = Executors.newSingleThreadExecutor(runnable -> {
         Thread thread = new Thread(runnable, "gtv2stream-worker");
@@ -48,31 +47,49 @@ public final class TvRecommendationService extends AccessibilityService {
     private final Handler handler = new Handler(Looper.getMainLooper());
     private Runnable pendingTitleRetry;
     private Runnable pendingHeroCapture;
+    private final LauncherInteractionPolicy.Session interactionSession =
+            new LauncherInteractionPolicy.Session();
     private RecommendationTitleParser.Source focusedHeroSource =
             RecommendationTitleParser.Source.NONE;
     private long focusedHeroCapturedAt;
+    /** Focus identity that owns the cached card/panel evidence below. */
+    private long focusEpoch;
+    private long focusedHeroEpoch = -1L;
+    private long lastCardEpoch = -1L;
+    private final android.graphics.Rect focusedNodeBounds = new android.graphics.Rect();
+    private boolean hasFocusedNodeBounds;
+    private int focusedNodeWindowId = -1;
+    private String focusedNodeLabel = "";
+    /** Direct focus identity constrains slower, weaker ambient-panel evidence. */
+    private String focusedTitle = "";
     /**
      * The last real card payload, captured either when a card was focused or
      * from a click event that actually carried one. This is the primary source
      * for both the stock-YouTube divert and the click fallback, because the
-     * ambient panel poll in {@link #focusedHeroSource} reads every text node in
-     * every window and is not trustworthy enough to be first. Never written by
+     * ambient panel poll in {@link #focusedHeroSource} is weaker evidence than
+     * the selected card itself. Never written by
      * the panel poll.
      */
     private RecommendationTitleParser.Source lastCardSource =
             RecommendationTitleParser.Source.NONE;
     private long lastCardCapturedAt;
-    /** Throttle for the focused-YouTube-card kill, so scrolling cannot spam the framework. */
-    private static final long STOCK_YOUTUBE_KILL_THROTTLE_MS = 2000L;
-    private long lastStockYoutubeKillAt;
     /** Window in which stock YouTube resurfacing may be answered with one re-assert. */
     private static final long DIVERT_REASSERT_WINDOW_MS = 6000L;
     private String lastDivertTitle = "";
     private long lastDivertAt;
     private int divertReassertsLeft;
+    private long lastDivertGeneration;
+    private String lastDivertTarget = "";
     private String lastDispatchedTitle = "";
     private boolean lastDispatchedYoutube;
     private long lastDispatchedAt;
+    private long lastDispatchedGeneration = -1L;
+    private long lastLauncherClickAt;
+    /** Provider evidence belongs to a selection, not the duplicate-event timer. */
+    private String selectedTitle = "";
+    private String selectedProvider = "";
+    private boolean selectedYoutube;
+    private long selectedGeneration = -1L;
     /**
      * Last whitelisted bypass, kept apart from the dispatch bookkeeping above
      * so the whitelist check can stay first without a bypass ever suppressing
@@ -82,6 +99,7 @@ public final class TvRecommendationService extends AccessibilityService {
     private String lastBypassedTitle = "";
     private boolean lastBypassedYoutube;
     private long lastBypassedAt;
+    private long lastBypassedGeneration = -1L;
 
     /**
      * Periodic connection heartbeat: Settings treats the service as Ready only
@@ -107,8 +125,7 @@ public final class TvRecommendationService extends AccessibilityService {
         // A service rebind can occur while a launcher card is already focused,
         // in which case Android sends no new focus event for that card.
         scheduleHeroCapture(100L, 12);
-        Log.i(TAG, "Accessibility service connected for " + LAUNCHER_PACKAGE
-                + " build=" + BUILD_STAMP);
+        Log.i(TAG, "Accessibility service connected");
     }
 
     @Override public void onAccessibilityEvent(AccessibilityEvent event) {
@@ -121,16 +138,49 @@ public final class TvRecommendationService extends AccessibilityService {
                     && STOCK_YOUTUBE_PACKAGE.contentEquals(event.getPackageName())) {
                 divertStockYouTube();
             }
+            // Opening our Settings cancels an outstanding selection; native
+            // provider windows are not cancelled because the launcher may open
+            // them while a legitimate TMDB lookup is in flight.
+            if (type == AccessibilityEvent.TYPE_WINDOW_STATE_CHANGED
+                    && getPackageName().contentEquals(event.getPackageName())) {
+                interactionSession.invalidate();
+                clearRecommendationContext();
+            }
             return;
         }
         logRawLauncherEvent(event);
+        long previousGeneration = interactionSession.ticket();
+        if (type == AccessibilityEvent.TYPE_VIEW_LONG_CLICKED) {
+            interactionSession.beginEditing();
+            clearRecommendationContext();
+            return;
+        }
+        if (type == AccessibilityEvent.TYPE_VIEW_CLICKED
+                || type == AccessibilityEvent.TYPE_VIEW_FOCUSED
+                || type == AccessibilityEvent.TYPE_VIEW_SELECTED) {
+            LauncherInteractionPolicy.Assessment interaction = assessInteraction(event);
+            if (!interactionSession.accept(interaction,
+                    type == AccessibilityEvent.TYPE_VIEW_CLICKED)) {
+                // Rejected controls are terminal, not missing card payloads.
+                // Otherwise Move/app tiles fall through to a stale YouTube panel.
+                clearRecommendationContext();
+                return;
+            }
+        }
         if (type == AccessibilityEvent.TYPE_VIEW_CLICKED) {
-            handleLauncherClick(event);
+            lastLauncherClickAt = SystemClock.elapsedRealtime();
+            clearDivert();
+            handleLauncherClick(event, previousGeneration);
         } else if (type == AccessibilityEvent.TYPE_WINDOW_STATE_CHANGED
                 && isEntityWindow(event.getClassName())) {
+            interactionSession.showDetail();
             handleEntityWindow();
         } else if (type == AccessibilityEvent.TYPE_WINDOW_STATE_CHANGED
                 && isHomeWindow(event.getClassName())) {
+            interactionSession.returnHome();
+            clearRecommendationContext();
+            // Refresh activity labels when returning from an install/update.
+            worker.execute(this::loadInstalledAppLabels);
             // The launcher's already-focused card may not emit a new focus event
             // when Home opens. Capture its hero payload before a quick click can
             // hand the recommendation to stock YouTube.
@@ -141,57 +191,214 @@ public final class TvRecommendationService extends AccessibilityService {
         }
     }
 
+    /** Each returned node is an owned acquisition, just like the framework event source. */
+    AccessibilityNodeInfo eventSource(AccessibilityEvent event) { return event.getSource(); }
+
+    private LauncherInteractionPolicy.Assessment assessInteraction(AccessibilityEvent event) {
+        Set<String> labels = installedAppLabels;
+        // Do not guess while PackageManager's initial worker-side load is pending.
+        if (labels == null) return new LauncherInteractionPolicy.Assessment(true, false, false, false);
+        AccessibilityNodeInfo source = eventSource(event);
+        try {
+            // Read all direct evidence before classifying: a provider-only event
+            // can belong to a real card whose title exists only on the node.
+            return LauncherInteractionPolicy.assess(event.getText(),
+                    toString(event.getContentDescription()),
+                    source == null ? "" : toString(source.getText()),
+                    source == null ? "" : toString(source.getContentDescription()), labels);
+        } finally {
+            if (source != null) source.recycle();
+        }
+    }
+
+    private void clearRecommendationContext() {
+        cancelTitleRetry();
+        if (pendingHeroCapture != null) {
+            handler.removeCallbacks(pendingHeroCapture);
+            pendingHeroCapture = null;
+        }
+        clearFocusedHeroSource();
+        focusEpoch++;
+        hasFocusedNodeBounds = false;
+        focusedNodeBounds.setEmpty();
+        focusedNodeWindowId = -1;
+        focusedNodeLabel = "";
+        focusedTitle = "";
+        clearLastCardSource();
+        clearDivert();
+        lastDispatchedTitle = "";
+        lastDispatchedAt = 0L;
+        lastDispatchedGeneration = -1L;
+        lastLauncherClickAt = 0L;
+        selectedTitle = "";
+        selectedProvider = "";
+        selectedGeneration = -1L;
+        lastBypassedTitle = "";
+        lastBypassedAt = 0L;
+        lastBypassedGeneration = -1L;
+    }
+
+    private void clearDivert() {
+        lastDivertTitle = "";
+        lastDivertAt = 0L;
+        lastDivertTarget = "";
+        divertReassertsLeft = 0;
+    }
+
     private void handleLauncherFocus(AccessibilityEvent event) {
         // Synchronous provider bridge: the focused card's event text,
         // content description, or source-node description already carries the
         // provider edge (e.g. "The Tomorrow War, requires Prime Video
         // subscription, ..."). Cache a provider-bearing source immediately so
         // the YouTube-only window poll below can never overwrite it.
-        RecommendationTitleParser.Source immediate =
-                RecommendationTitleParser.fromEventTextSource(event.getText());
-        if (immediate.isEmpty() || !immediate.hasProvider()) {
-            immediate = RecommendationTitleParser.fromDescriptionSource(
-                    toString(event.getContentDescription()));
+        RecommendationTitleParser.Source immediate = directSource(event);
+        if (immediate == null) {
+            interactionSession.invalidate();
+            clearRecommendationContext();
+            return;
         }
-        if (isUsableYouTubeSource(immediate)) {
-            // The focused card's payload is the card the user is about to press,
-            // and it is the only source that survives this launcher's click
-            // events, which sometimes expose just the grid label of the card's
-            // container ("Column 3") and nothing else.
-            rememberCard(immediate);
-        }
-        AccessibilityNodeInfo source = event.getSource();
-        if (source != null) {
-            try {
-                if (immediate.isEmpty() || !immediate.hasProvider()) {
-                    RecommendationTitleParser.Source nodeSource =
-                            RecommendationTitleParser.fromDescriptionSource(
-                                    toString(source.getContentDescription()));
-                    if (!nodeSource.isEmpty() && nodeSource.hasProvider()) {
-                        immediate = nodeSource;
-                    }
-                }
+        AccessibilityNodeInfo source = eventSource(event);
+        try {
+            boolean changedNode = noteFocusedNode(event, source);
+            boolean incompatible = incompatibleSource(immediate, lastCardSource)
+                    || incompatibleSource(immediate, focusedHeroSource);
+            if (changedNode || incompatible) advanceFocusEpoch();
+            focusedTitle = immediate.lookupTitle();
+            if (isUsableYouTubeSource(immediate)) {
+                // The focused card's payload is the card the user is about to press,
+                // and it is the only source that survives this launcher's click
+                // events, which sometimes expose just the grid label of the card's
+                // container ("Column 3") and nothing else.
+                rememberCard(immediate);
+            }
+            if (source != null) {
                 if (!immediate.isEmpty() && immediate.hasProvider()) {
+                    if (pendingHeroCapture != null) handler.removeCallbacks(pendingHeroCapture);
+                    pendingHeroCapture = null;
+                    if (immediate.youtube) rememberCard(immediate);
+                    else clearLastCardSource();
                     focusedHeroSource = immediate;
-                    focusedHeroCapturedAt = System.currentTimeMillis();
-                    Log.i(TAG, "Cached focused provider title: " + immediate.title
+                    focusedHeroCapturedAt = SystemClock.elapsedRealtime();
+                    focusedHeroEpoch = focusEpoch;
+                    Diagnostics.debug("Cached focused provider title: " + immediate.title
                             + " (" + immediate.provider + ")");
                     return;
                 }
                 android.graphics.Rect bounds = new android.graphics.Rect();
                 source.getBoundsInScreen(bounds);
                 scheduleFocusedHeroCapture(bounds);
-            } finally {
-                source.recycle();
+            } else if (!immediate.isEmpty() && immediate.hasProvider()) {
+                if (pendingHeroCapture != null) handler.removeCallbacks(pendingHeroCapture);
+                pendingHeroCapture = null;
+                if (!immediate.youtube) clearLastCardSource();
+                focusedHeroSource = immediate;
+                focusedHeroCapturedAt = SystemClock.elapsedRealtime();
+                focusedHeroEpoch = focusEpoch;
+                Diagnostics.debug("Cached focused provider title: " + immediate.title
+                        + " (" + immediate.provider + ")");
+            } else {
+                clearFocusedHeroSource();
             }
-        } else if (!immediate.isEmpty() && immediate.hasProvider()) {
-            focusedHeroSource = immediate;
-            focusedHeroCapturedAt = System.currentTimeMillis();
-            Log.i(TAG, "Cached focused provider title: " + immediate.title
-                    + " (" + immediate.provider + ")");
-        } else {
-            clearFocusedHeroSource();
+        } finally {
+            if (source != null) source.recycle();
         }
+    }
+
+    /**
+     * Records a usable spatial identity for the focused card. Repeated events on
+     * the same card keep its evidence; moving to another bounded node retires it
+     * even when both events expose only "Column N" or the same title.
+     */
+    private boolean noteFocusedNode(AccessibilityEvent event, AccessibilityNodeInfo node) {
+        if (node == null) return false;
+        android.graphics.Rect bounds = new android.graphics.Rect();
+        node.getBoundsInScreen(bounds);
+        if (bounds.isEmpty()) return false;
+        int windowId = event.getWindowId() >= 0 ? event.getWindowId() : node.getWindowId();
+        String nodeLabel = focusNodeLabel(event, node);
+        boolean windowChanged = focusedNodeWindowId >= 0 && windowId >= 0
+                && focusedNodeWindowId != windowId;
+        boolean labelChanged = !focusedNodeLabel.isEmpty() && !nodeLabel.isEmpty()
+                && !focusedNodeLabel.equals(nodeLabel);
+        boolean sameGeometry = focusedNodeBounds.equals(bounds)
+                || focusedNodeBounds.contains(bounds) || bounds.contains(focusedNodeBounds)
+                || (!focusedNodeLabel.isEmpty() && focusedNodeLabel.equals(nodeLabel)
+                    && substantiallyOverlaps(focusedNodeBounds, bounds));
+        boolean changed = hasFocusedNodeBounds
+                && (windowChanged || labelChanged || !sameGeometry);
+        focusedNodeBounds.set(bounds);
+        hasFocusedNodeBounds = true;
+        focusedNodeWindowId = windowId;
+        if (!nodeLabel.isEmpty()) focusedNodeLabel = nodeLabel;
+        return changed;
+    }
+
+    private static boolean substantiallyOverlaps(
+            android.graphics.Rect first, android.graphics.Rect second) {
+        android.graphics.Rect overlap = new android.graphics.Rect(first);
+        if (!overlap.intersect(second)) return false;
+        long overlapArea = (long) overlap.width() * overlap.height();
+        long smallerArea = Math.min((long) first.width() * first.height(),
+                (long) second.width() * second.height());
+        return smallerArea > 0 && overlapArea * 2L >= smallerArea;
+    }
+
+    private static String focusNodeLabel(AccessibilityEvent event, AccessibilityNodeInfo node) {
+        String viewId = toString(node.getViewIdResourceName()).trim().toLowerCase(java.util.Locale.US);
+        String value = "";
+        if (event.getText() != null && !event.getText().isEmpty()) {
+            value = toString(event.getText().get(0)).trim().toLowerCase(java.util.Locale.US);
+        }
+        if (!value.matches("(?:column|row)\\s+\\d+")) {
+            value = toString(node.getText()).trim().toLowerCase(java.util.Locale.US);
+        }
+        if (!value.matches("(?:column|row)\\s+\\d+")) value = "";
+        if (value.isEmpty()) return "";
+        return viewId.isEmpty() ? value : viewId + "|" + value;
+    }
+
+    private void advanceFocusEpoch() {
+        focusEpoch++;
+        if (pendingHeroCapture != null) handler.removeCallbacks(pendingHeroCapture);
+        pendingHeroCapture = null;
+        clearLastCardSource();
+        clearFocusedHeroSource();
+        clearDivert();
+    }
+
+    private static boolean incompatibleSource(RecommendationTitleParser.Source current,
+            RecommendationTitleParser.Source cached) {
+        return !current.isEmpty() && !cached.isEmpty()
+                && (!TitleResultHelper.compatibleTitles(current.lookupTitle(), cached.lookupTitle())
+                    || (current.hasProvider() && current.youtube != cached.youtube));
+    }
+
+    /** Direct evidence only; null means contradictory content, not a missing payload. */
+    private RecommendationTitleParser.Source directSource(AccessibilityEvent event) {
+        RecommendationTitleParser.Source result = mergeDirectSources(
+                RecommendationTitleParser.fromEventTextSource(event.getText()),
+                RecommendationTitleParser.fromDescriptionSource(toString(event.getContentDescription())));
+        AccessibilityNodeInfo node = eventSource(event);
+        if (node == null) return result;
+        try {
+            result = mergeDirectSources(result,
+                    RecommendationTitleParser.fromDescriptionSource(toString(node.getText())));
+            return mergeDirectSources(result,
+                    RecommendationTitleParser.fromDescriptionSource(toString(node.getContentDescription())));
+        } finally {
+            node.recycle();
+        }
+    }
+
+    private static RecommendationTitleParser.Source mergeDirectSources(
+            RecommendationTitleParser.Source primary, RecommendationTitleParser.Source context) {
+        if (primary == null) return null;
+        if (primary.isEmpty()) return context;
+        if (context.isEmpty()) return primary;
+        if (!TitleResultHelper.compatibleTitles(primary.lookupTitle(), context.lookupTitle())
+                || (primary.hasProvider() && context.hasProvider()
+                    && !primary.provider.equals(context.provider))) return null;
+        return RecommendationTitleParser.withProviderContext(primary, context);
     }
 
     private void scheduleFocusedHeroCapture(android.graphics.Rect bounds) {
@@ -206,9 +413,14 @@ public final class TvRecommendationService extends AccessibilityService {
     }
 
     private void scheduleHeroCapture(long delayMs, int attemptsRemaining) {
+        scheduleHeroCapture(delayMs, attemptsRemaining, focusEpoch);
+    }
+
+    private void scheduleHeroCapture(long delayMs, int attemptsRemaining, long expectedEpoch) {
         if (pendingHeroCapture != null) handler.removeCallbacks(pendingHeroCapture);
         pendingHeroCapture = () -> {
             pendingHeroCapture = null;
+            if (expectedEpoch != focusEpoch) return;
             RecommendationTitleParser.Source source = sourceFromWindowPayloads();
             if (source.isEmpty()) {
                 // Never clear a title that is still fresh. On this launcher the
@@ -224,14 +436,14 @@ public final class TvRecommendationService extends AccessibilityService {
                 if (attemptsRemaining > 1) {
                     // Hero metadata arrives after the focus event. Poll briefly so a
                     // click made as soon as it becomes visible still has the title.
-                    scheduleHeroCapture(100L, attemptsRemaining - 1);
+                    scheduleHeroCapture(100L, attemptsRemaining - 1, expectedEpoch);
                 }
                 return;
             }
             focusedHeroSource = source;
-            focusedHeroCapturedAt = System.currentTimeMillis();
-            Log.i(TAG, "Cached focused YouTube title: " + source.title);
-            noteYoutubeCardFocused();
+            focusedHeroCapturedAt = SystemClock.elapsedRealtime();
+            focusedHeroEpoch = focusEpoch;
+            Diagnostics.debug("Cached focused YouTube title: " + source.title);
         };
         handler.postDelayed(pendingHeroCapture, delayMs);
     }
@@ -239,48 +451,35 @@ public final class TvRecommendationService extends AccessibilityService {
     private void clearFocusedHeroSource() {
         focusedHeroSource = RecommendationTitleParser.Source.NONE;
         focusedHeroCapturedAt = 0;
+        focusedHeroEpoch = -1L;
     }
 
     private boolean hasFreshFocusedHeroSource() {
-        return !focusedHeroSource.isEmpty()
-                && System.currentTimeMillis() - focusedHeroCapturedAt < FOCUSED_HERO_WINDOW_MS;
+        return focusedHeroEpoch == focusEpoch && !focusedHeroSource.isEmpty() && DivertPolicy.isFresh(
+                focusedHeroCapturedAt, SystemClock.elapsedRealtime(), FOCUSED_HERO_WINDOW_MS);
     }
 
     /** Records the card payload as the primary divert source. */
     private void rememberCard(RecommendationTitleParser.Source source) {
         if (source == null || source.isEmpty()) return;
         lastCardSource = source;
-        lastCardCapturedAt = System.currentTimeMillis();
-        if (isUsableYouTubeSource(source)) noteYoutubeCardFocused();
-    }
-
-    /**
-     * Drops a backgrounded stock YouTube as soon as we know the focused card is
-     * a YouTube video.
-     *
-     * <p>This is the only moment the kill can work. Once the card is clicked the
-     * launcher has already brought its own copy of stock YouTube forward, and
-     * {@code killBackgroundProcesses} cannot touch a foreground app, so a
-     * post-click kill is a no-op. Killing it while it is still backgrounded makes
-     * the launcher's own launch a cold start, which cannot out-race the redirect,
-     * and leaves nothing resident to take the foreground back afterwards.
-     * Throttled so scrolling across the row does not hammer the framework.
-     */
-    private void noteYoutubeCardFocused() {
-        long now = System.currentTimeMillis();
-        if (now - lastStockYoutubeKillAt < STOCK_YOUTUBE_KILL_THROTTLE_MS) return;
-        lastStockYoutubeKillAt = now;
-        worker.execute(() -> dropStockYouTube("focused YouTube card"));
+        lastCardCapturedAt = SystemClock.elapsedRealtime();
+        lastCardEpoch = focusEpoch;
     }
 
     private void clearLastCardSource() {
         lastCardSource = RecommendationTitleParser.Source.NONE;
         lastCardCapturedAt = 0L;
+        lastCardEpoch = -1L;
     }
 
     /** True when a cached source is a YouTube-marked title we can search for. */
     private static boolean isUsableYouTubeSource(RecommendationTitleParser.Source source) {
         return source != null && !source.isEmpty() && source.youtube;
+    }
+
+    private boolean hasCurrentYouTubeCard() {
+        return lastCardEpoch == focusEpoch && isUsableYouTubeSource(lastCardSource);
     }
 
     /**
@@ -294,10 +493,21 @@ public final class TvRecommendationService extends AccessibilityService {
      * an unrelated video is worse than leaving stock YouTube on screen.
      */
     private void divertStockYouTube() {
+        if (isWhitelistedProvider("youtube")) {
+            clearDivert();
+            clearLastCardSource();
+            clearFocusedHeroSource();
+            return;
+        }
         if (reassertLastDivert()) return;
-        long now = System.currentTimeMillis();
-        boolean clickedUsable = isUsableYouTubeSource(lastCardSource);
-        boolean heroUsable = isUsableYouTubeSource(focusedHeroSource);
+        // Focusing a recommendation is not authorisation to hijack a later
+        // manual/remote-button YouTube launch. A launcher click must precede it.
+        if (!DivertPolicy.isFresh(lastLauncherClickAt, SystemClock.elapsedRealtime(),
+                DivertPolicy.CLICKED_CARD_TTL_MS)) return;
+        long now = SystemClock.elapsedRealtime();
+        boolean clickedUsable = hasCurrentYouTubeCard();
+        boolean heroUsable = focusedHeroEpoch == focusEpoch
+                && isUsableYouTubeSource(focusedHeroSource);
         DivertPolicy.Choice choice = DivertPolicy.choose(
                 lastCardCapturedAt, clickedUsable,
                 focusedHeroCapturedAt, heroUsable, now);
@@ -305,32 +515,37 @@ public final class TvRecommendationService extends AccessibilityService {
             RecommendationTitleParser.Source source = lastCardSource;
             long age = now - lastCardCapturedAt;
             clearLastCardSource();
-            noteDiverted(source.title);
-            Log.i(TAG, "Stock YouTube divert: clicked card (age " + age + "ms) "
+            Diagnostics.debug("Stock YouTube divert: clicked card (age " + age + "ms) "
                     + source.title);
-            dispatchTitle(source.title, true, source.provider);
+            dispatchTitle(source.lookupTitle(), true, source.provider);
             return;
         }
         if (choice == DivertPolicy.Choice.HERO_PANEL) {
             RecommendationTitleParser.Source source = focusedHeroSource;
             long age = now - focusedHeroCapturedAt;
             clearFocusedHeroSource();
-            noteDiverted(source.title);
-            Log.i(TAG, "Stock YouTube divert: ambient panel (age " + age + "ms) "
+            Diagnostics.debug("Stock YouTube divert: ambient panel (age " + age + "ms) "
                     + source.title);
-            dispatchTitle(source.title, true, source.provider);
+            dispatchTitle(source.lookupTitle(), true, source.provider);
             return;
         }
-        Log.w(TAG, "Divert missed: no card title cached (clicked="
+        Diagnostics.debug("Divert missed: no card title cached (clicked="
                 + describeCache(lastCardSource, lastCardCapturedAt, now)
                 + ", hero=" + describeCache(focusedHeroSource, focusedHeroCapturedAt, now) + ")");
     }
 
     /** Records a successful divert so a resurfacing stock YouTube can be answered once. */
-    private void noteDiverted(String title) {
-        lastDivertTitle = title == null ? "" : title;
-        lastDivertAt = System.currentTimeMillis();
+    private void noteDiverted(String title, String target, long generation) {
+        lastDivertTitle = title;
+        lastDivertAt = SystemClock.elapsedRealtime();
+        lastDivertTarget = target;
+        lastDivertGeneration = generation;
         divertReassertsLeft = 1;
+        // This selection is consumed. Further window changes can use only the
+        // single guarded reassert, not start a new dispatch from the old card.
+        lastLauncherClickAt = 0L;
+        clearLastCardSource();
+        clearFocusedHeroSource();
     }
 
     /**
@@ -342,14 +557,25 @@ public final class TvRecommendationService extends AccessibilityService {
      */
     private boolean reassertLastDivert() {
         if (divertReassertsLeft <= 0 || lastDivertTitle.isEmpty()) return false;
-        long now = System.currentTimeMillis();
-        if (now - lastDivertAt > DIVERT_REASSERT_WINDOW_MS) return false;
+        if (!DivertPolicy.isFresh(lastDivertAt, SystemClock.elapsedRealtime(), DIVERT_REASSERT_WINDOW_MS)
+                || !canLaunch(lastDivertGeneration, "youtube")
+                || !lastDivertTarget.equals(AppPrefs.youtubeTarget(this))) {
+            clearDivert();
+            return false;
+        }
         divertReassertsLeft--;
-        lastDivertAt = now;
         final String title = lastDivertTitle;
-        Log.i(TAG, "Stock YouTube resurfaced after the redirect; re-asserting the search");
-        worker.execute(() -> {
-            if (YouTubeLauncher.open(this, title)) RedirectBadge.show(this);
+        final String target = lastDivertTarget;
+        final long generation = lastDivertGeneration;
+        handler.post(() -> {
+            if (!canLaunch(generation, "youtube") || !target.equals(AppPrefs.youtubeTarget(this))) return;
+            try {
+                // Do not arm another reassert: one successful redirect permits
+                // at most one attempt to answer a late stock-YouTube window.
+                if (openYouTubeTarget(title)) showRedirectBadge();
+            } catch (RuntimeException error) {
+                notifyUser(R.string.status_redirect_failed);
+            }
         });
         return true;
     }
@@ -363,13 +589,11 @@ public final class TvRecommendationService extends AccessibilityService {
     }
 
     /**
-     * Diagnostic: the raw truth of every click/focus event the launcher sends,
-     * so a live test can prove what a card click actually carries instead of
-     * inferring it from downstream behaviour. The event's source node is read
-     * but never recycled here: the click handler runs moments later on the same
-     * dispatch and reads that same node.
+     * Debug builds only: inspect an event without retaining its source node.
+     * Each getSource() result is a separate owned acquisition.
      */
     private void logRawLauncherEvent(AccessibilityEvent event) {
+        if (!BuildConfig.DEBUG) return;
         int type = event.getEventType();
         if (type != AccessibilityEvent.TYPE_VIEW_CLICKED
                 && type != AccessibilityEvent.TYPE_VIEW_FOCUSED
@@ -380,8 +604,9 @@ public final class TvRecommendationService extends AccessibilityService {
                 .append(" class=").append(toString(event.getClassName()))
                 .append(" text=").append(clip(joinEventText(event.getText())))
                 .append(" desc=").append(clip(toString(event.getContentDescription())));
+        AccessibilityNodeInfo source = null;
         try {
-            AccessibilityNodeInfo source = event.getSource();
+            source = eventSource(event);
             if (source != null) {
                 android.graphics.Rect bounds = new android.graphics.Rect();
                 source.getBoundsInScreen(bounds);
@@ -393,9 +618,11 @@ public final class TvRecommendationService extends AccessibilityService {
                         .append(']');
             }
         } catch (RuntimeException rawError) {
-            line.append(" node[unreadable ").append(rawError.getMessage()).append(']');
+            line.append(" node[unreadable]");
+        } finally {
+            if (source != null) source.recycle();
         }
-        Log.i(TAG, line.toString());
+        Diagnostics.debug(line.toString());
     }
 
     private static String eventTypeName(int type) {
@@ -420,7 +647,7 @@ public final class TvRecommendationService extends AccessibilityService {
 
     private static String clip(String value) {
         if (value == null) return "";
-        return value.length() > 160 ? value.substring(0, 160) + "…" : value;
+        return value.substring(0, Math.min(value.length(), 160));
     }
 
     /**
@@ -433,32 +660,75 @@ public final class TvRecommendationService extends AccessibilityService {
         if (detailTitle == null || detailTitle.isEmpty()) return "";
         if (!hasFreshFocusedHeroSource()) return "";
         return DispatchPolicy.focusedProviderForDetail(
-                focusedHeroSource.title, focusedHeroSource.youtube, focusedHeroSource.provider,
+                focusedHeroSource.lookupTitle(), focusedHeroSource.youtube, focusedHeroSource.provider,
                 focusedHeroCapturedAt, detailTitle,
-                System.currentTimeMillis(), FOCUSED_HERO_WINDOW_MS);
+                SystemClock.elapsedRealtime(), FOCUSED_HERO_WINDOW_MS);
     }
 
-    private void handleLauncherClick(AccessibilityEvent event) {
+    private void handleLauncherClick(AccessibilityEvent event, long previousGeneration) {
         cancelTitleRetry();
-        RecommendationTitleParser.Source source =
-                RecommendationTitleParser.fromEventTextSource(event.getText());
-        if (source.isEmpty()) {
-            source = RecommendationTitleParser.fromDescriptionSource(
-                    toString(event.getContentDescription()));
+        RecommendationTitleParser.Source source = directSource(event);
+        if (source == null) {
+            interactionSession.invalidate();
+            clearRecommendationContext();
+            return;
+        }
+        if (isDetailPlaybackAction(event)) {
+            String detailTitle = titleFromDetailRoot();
+            if (!detailTitle.isEmpty() && (source.isEmpty()
+                    || (!source.youtube && TitleResultHelper.compatibleTitles(source.lookupTitle(), detailTitle)))) {
+                if (TitleResultHelper.extractYear(detailTitle).isEmpty() && !source.year.isEmpty()) {
+                    detailTitle = source.lookupTitle();
+                }
+                String detailProvider = source.hasProvider() ? source.provider : focusedProviderForDetail(detailTitle);
+                // The click invalidates older work, but Watch/Play on the same
+                // authoritative detail row continues that entity's known policy.
+                // A new card, another title/year, or a prior generation cannot
+                // inherit it merely because the click omitted provider metadata.
+                if (selectedGeneration == previousGeneration && !selectedYoutube
+                        && TitleResultHelper.compatibleTitles(selectedTitle, detailTitle)) {
+                    if (TitleResultHelper.extractYear(detailTitle).isEmpty()) detailTitle = selectedTitle;
+                    if (detailProvider.isEmpty()) detailProvider = selectedProvider;
+                }
+                if (!detailProvider.isEmpty()) clearFocusedHeroSource();
+                dispatchTitle(detailTitle, false, detailProvider);
+                return;
+            }
+        }
+        if (!source.isEmpty() && !source.hasProvider() && hasFreshFocusedHeroSource()
+                && TitleResultHelper.compatibleTitles(source.lookupTitle(), focusedHeroSource.lookupTitle())) {
+            source = RecommendationTitleParser.withProviderContext(source, focusedHeroSource);
+        }
+        // Always inspect the bounded card region. Some cards expose title and
+        // provider in sibling nodes; an ad/sponsored badge can also be separated
+        // from an otherwise complete direct payload and must stay terminal.
+        ClickedNodeSource recovered = sourceFromClickedNode(event);
+        if (recovered.terminal) {
+            interactionSession.invalidate();
+            clearRecommendationContext();
+            return;
         }
         if (source.isEmpty()) {
-            // Some cards (notably YouTube) emit click events with no text or
-            // description; the payload lives on the card container, an ancestor
-            // of the clicked view.
-            source = sourceFromClickedNode(event);
+            source = recovered.source;
+        } else if (!recovered.source.isEmpty()) {
+            RecommendationTitleParser.Source merged =
+                    mergeDirectSources(source, recovered.source);
+            if (merged == null || merged.isEmpty()) {
+                interactionSession.invalidate();
+                clearRecommendationContext();
+                return;
+            }
+            source = merged;
         }
         if (!source.isEmpty()) {
             // This payload came from the click event or the clicked node, so it
             // describes the card the user actually pressed: remember it as the
             // primary source for a stock-YouTube divert before any panel cache
             // can be consulted.
+            focusedTitle = source.lookupTitle();
             rememberCard(source);
-            dispatchTitle(source.title, source.youtube, source.provider);
+            if (!source.youtube && focusedHeroSource.youtube) clearFocusedHeroSource();
+            dispatchTitle(source.lookupTitle(), source.youtube, source.provider);
         } else {
             logRejectedPayload(event);
             // Detail-action fix (live Shang-Chi no-op): a click on an entity
@@ -476,13 +746,13 @@ public final class TvRecommendationService extends AccessibilityService {
             // captured when it gained focus. Prefer that over the ambient panel,
             // whose scan reads launcher chrome and once searched YouTube for
             // "Column 3" instead of the card's video.
-            if (isUsableYouTubeSource(lastCardSource)
+            if (hasCurrentYouTubeCard()
                     && DivertPolicy.isFresh(lastCardCapturedAt,
-                            System.currentTimeMillis(), FOCUSED_HERO_WINDOW_MS)) {
+                            SystemClock.elapsedRealtime(), FOCUSED_HERO_WINDOW_MS)) {
                 RecommendationTitleParser.Source cached = lastCardSource;
                 clearLastCardSource();
-                Log.i(TAG, "Click payload unusable; using the focused card title");
-                dispatchTitle(cached.title, cached.youtube, cached.provider);
+                Diagnostics.debug("Click payload unusable; using the focused card title");
+                dispatchTitle(cached.lookupTitle(), cached.youtube, cached.provider);
                 return;
             }
             source = sourceFromWindowPayloads();
@@ -491,11 +761,30 @@ public final class TvRecommendationService extends AccessibilityService {
             }
             if (!source.isEmpty()) {
                 clearFocusedHeroSource();
-                dispatchTitle(source.title, source.youtube, source.provider);
+                dispatchTitle(source.lookupTitle(), source.youtube, source.provider);
                 return;
             }
             scheduleTitleRetry();
         }
+    }
+
+    private boolean isDetailPlaybackAction(AccessibilityEvent event) {
+        if (event.getText() != null && !event.getText().isEmpty()
+                && isPlaybackLabel(toString(event.getText().get(0)))) return true;
+        if (isPlaybackLabel(toString(event.getContentDescription()))) return true;
+        AccessibilityNodeInfo node = eventSource(event);
+        if (node == null) return false;
+        try {
+            return isPlaybackLabel(toString(node.getText()))
+                    || isPlaybackLabel(toString(node.getContentDescription()));
+        } finally {
+            node.recycle();
+        }
+    }
+
+    private static boolean isPlaybackLabel(String value) {
+        return "watch".equalsIgnoreCase(value.trim()) || "watch now".equalsIgnoreCase(value.trim())
+                || "play".equalsIgnoreCase(value.trim()) || "trailer".equalsIgnoreCase(value.trim());
     }
 
     /**
@@ -506,64 +795,280 @@ public final class TvRecommendationService extends AccessibilityService {
      * card's region, feeds those to the classifier, and falls back to the
      * ancestor chain. Nodes are recycled immediately.
      */
-    private RecommendationTitleParser.Source sourceFromClickedNode(AccessibilityEvent event) {
-        AccessibilityNodeInfo owned = event.getSource();
-        if (owned == null) return RecommendationTitleParser.Source.NONE;
+    ClickedNodeSource sourceFromClickedNode(AccessibilityEvent event) {
+        AccessibilityNodeInfo owned = eventSource(event);
+        if (owned == null) return ClickedNodeSource.EMPTY;
         try {
             android.graphics.Rect clickBounds = new android.graphics.Rect();
             owned.getBoundsInScreen(clickBounds);
-            List<CharSequence> collected = new ArrayList<>();
+            NearbySource nearby = new NearbySource(clickBounds);
             AccessibilityNodeInfo root = getRootInActiveWindow();
             if (root != null) {
                 try {
-                    collectNearbyPayloadTexts(root, 0, clickBounds, collected);
+                    if (LAUNCHER_PACKAGE.contentEquals(toString(root.getPackageName()))
+                            && (event.getWindowId() < 0 || root.getWindowId() == event.getWindowId())) {
+                        collectNearbySources(root, 0, nearby, new int[] {256});
+                    }
                 } finally {
                     root.recycle();
                 }
             }
-            RecommendationTitleParser.Source found =
-                    RecommendationTitleParser.fromEventTextSource(collected);
-            if (!found.isEmpty()) return found;
-            if (!collected.isEmpty()) {
-                Log.i(TAG, "Card region payload: " + collected);
+            if (nearby.truncated || nearby.ambiguous || nearby.rejected) {
+                return ClickedNodeSource.TERMINAL;
             }
-            return cardSourceFromAncestors(owned);
+            RecommendationTitleParser.Source found = nearby.result();
+            if (!found.isEmpty()) return ClickedNodeSource.found(found);
+            return ClickedNodeSource.found(cardSourceFromAncestors(owned));
         } catch (RuntimeException walkError) {
-            Log.w(TAG, "Could not read clicked card payload: " + walkError.getMessage());
-            return RecommendationTitleParser.Source.NONE;
+            Diagnostics.debug("Could not read clicked card payload: " + walkError.getMessage());
+            return ClickedNodeSource.TERMINAL;
         } finally {
             owned.recycle();
         }
     }
 
-    /** Depth- and count-bounded scan collecting payloads near the clicked card's bounds. */
-    private void collectNearbyPayloadTexts(AccessibilityNodeInfo node, int depth,
-            android.graphics.Rect clickBounds, List<CharSequence> out) {
-        if (node == null || depth > 7 || out.size() > 60) return;
+    /** Depth- and count-bounded scan ranking coherent node payloads by spatial proximity. */
+    private void collectNearbySources(AccessibilityNodeInfo node, int depth,
+            NearbySource nearby, int[] budget) {
+        if (node == null) return;
         android.graphics.Rect bounds = new android.graphics.Rect();
         node.getBoundsInScreen(bounds);
-        android.graphics.Rect region = new android.graphics.Rect(clickBounds);
-        region.inset(-60, -60);
-        if (android.graphics.Rect.intersects(bounds, region)) {
-            String text = toString(node.getText());
-            if (!text.isEmpty()) out.add(text);
-            String description = toString(node.getContentDescription());
-            if (!description.isEmpty()) out.add(description);
+        boolean relevant = !bounds.isEmpty()
+                && android.graphics.Rect.intersects(bounds, nearby.region);
+        if (depth > 7 || budget[0] <= 0) {
+            // We cannot prove that an unvisited branch lacks a relevant child.
+            // Never let a partial earlier candidate win after a traversal cap.
+            nearby.truncated = true;
+            return;
         }
-        for (int index = 0; index < node.getChildCount() && out.size() <= 60; index++) {
+        budget[0]--;
+        if (relevant) {
+            String text = toString(node.getText());
+            String description = toString(node.getContentDescription());
+            if (RecommendationTitleParser.isRejectedPayload(text)
+                    || RecommendationTitleParser.isRejectedPayload(description)) {
+                nearby.rejected = true;
+            }
+            RecommendationTitleParser.Source direct = mergeDirectSources(
+                    RecommendationTitleParser.fromDescriptionSource(text),
+                    RecommendationTitleParser.fromDescriptionSource(description));
+            if (direct == null) nearby.considerConflict(bounds);
+            else nearby.consider(direct, bounds);
+            if (nearby.isPlausibleCardContainer(bounds)) {
+                CardEvidence grouped = cardEvidenceFromSubtree(
+                        node, 0, new int[] {32}, new boolean[1]);
+                if (grouped.ambiguous) nearby.considerConflict(bounds);
+                else nearby.consider(grouped.source, bounds);
+            }
+        }
+        for (int index = 0; index < node.getChildCount(); index++) {
             AccessibilityNodeInfo child = node.getChild(index);
             if (child == null) continue;
             try {
-                collectNearbyPayloadTexts(child, depth + 1, clickBounds, out);
+                collectNearbySources(child, depth + 1, nearby, budget);
             } finally {
                 child.recycle();
             }
         }
     }
 
+    /** Parses one bounded card subtree as a coherent unit, never neighbouring card subtrees. */
+    private CardEvidence cardEvidenceFromSubtree(
+            AccessibilityNodeInfo node, int depth, int[] budget, boolean[] truncated) {
+        List<CharSequence> values = new ArrayList<>();
+        collectCardValues(node, depth, budget, truncated, values);
+        if (truncated[0]) return CardEvidence.AMBIGUOUS;
+        return cardEvidenceFromValues(values);
+    }
+
+    private CardEvidence cardEvidenceFromValues(List<CharSequence> values) {
+        if (values.isEmpty()) return CardEvidence.EMPTY;
+        if (values.size() > 32) return CardEvidence.AMBIGUOUS;
+        for (CharSequence value : values) {
+            if (RecommendationTitleParser.isRejectedPayload(toString(value))) {
+                return CardEvidence.AMBIGUOUS;
+            }
+        }
+        RecommendationTitleParser.Source providerSource = RecommendationTitleParser.Source.NONE;
+        RecommendationTitleParser.Source bareSource = RecommendationTitleParser.Source.NONE;
+        boolean providerAmbiguous = false;
+        boolean bareAmbiguous = false;
+        for (int first = 0; first < values.size(); first++) {
+            List<CharSequence> pair = new ArrayList<>(2);
+            pair.add(values.get(first));
+            for (int second = -1; second < values.size(); second++) {
+                RecommendationTitleParser.Source candidate;
+                if (second < 0 || second == first) {
+                    candidate = RecommendationTitleParser.fromDescriptionSource(toString(values.get(first)));
+                } else {
+                    pair.add(values.get(second));
+                    candidate = RecommendationTitleParser.fromEventTextSource(pair);
+                    pair.remove(1);
+                }
+                if (candidate.isEmpty()) continue;
+                if (candidate.hasProvider()) {
+                    RecommendationTitleParser.Source merged = mergeDirectSources(providerSource, candidate);
+                    if (providerSource.isEmpty()) providerSource = candidate;
+                    else if (merged == null || merged.isEmpty()) providerAmbiguous = true;
+                    else providerSource = merged;
+                } else {
+                    RecommendationTitleParser.Source merged = mergeDirectSources(bareSource, candidate);
+                    if (bareSource.isEmpty()) bareSource = candidate;
+                    else if (merged == null || merged.isEmpty()) bareAmbiguous = true;
+                    else bareSource = merged;
+                }
+            }
+        }
+        if (!providerSource.isEmpty()) {
+            if (providerAmbiguous) return CardEvidence.AMBIGUOUS;
+            return new CardEvidence(providerSource, false);
+        }
+        if (bareAmbiguous) return CardEvidence.AMBIGUOUS;
+        return new CardEvidence(bareSource, false);
+    }
+
+    /** Test seam for coherent values collected from one bounded card subtree. */
+    RecommendationTitleParser.Source selectCardValues(List<CharSequence> values) {
+        CardEvidence evidence = cardEvidenceFromValues(values);
+        return evidence.ambiguous ? RecommendationTitleParser.Source.NONE : evidence.source;
+    }
+
+    private void collectCardValues(AccessibilityNodeInfo node, int depth,
+            int[] budget, boolean[] truncated, List<CharSequence> out) {
+        if (node == null) return;
+        if (depth > 2 || budget[0]-- <= 0) {
+            truncated[0] = true;
+            return;
+        }
+        String text = toString(node.getText());
+        if (!text.isEmpty()) out.add(text);
+        String description = toString(node.getContentDescription());
+        if (!description.isEmpty()) out.add(description);
+        for (int index = 0; index < node.getChildCount(); index++) {
+            if (budget[0] <= 0) {
+                truncated[0] = true;
+                break;
+            }
+            AccessibilityNodeInfo child = node.getChild(index);
+            if (child == null) continue;
+            try { collectCardValues(child, depth + 1, budget, truncated, out); }
+            finally { child.recycle(); }
+        }
+    }
+
+    static final class ClickedNodeSource {
+        static final ClickedNodeSource EMPTY =
+                new ClickedNodeSource(RecommendationTitleParser.Source.NONE, false);
+        static final ClickedNodeSource TERMINAL =
+                new ClickedNodeSource(RecommendationTitleParser.Source.NONE, true);
+        final RecommendationTitleParser.Source source;
+        final boolean terminal;
+        ClickedNodeSource(RecommendationTitleParser.Source source, boolean terminal) {
+            this.source = source;
+            this.terminal = terminal;
+        }
+        static ClickedNodeSource found(RecommendationTitleParser.Source source) {
+            return source == null || source.isEmpty() ? EMPTY : new ClickedNodeSource(source, false);
+        }
+    }
+
+    private static final class CardEvidence {
+        static final CardEvidence EMPTY =
+                new CardEvidence(RecommendationTitleParser.Source.NONE, false);
+        static final CardEvidence AMBIGUOUS =
+                new CardEvidence(RecommendationTitleParser.Source.NONE, true);
+        final RecommendationTitleParser.Source source;
+        final boolean ambiguous;
+        CardEvidence(RecommendationTitleParser.Source source, boolean ambiguous) {
+            this.source = source;
+            this.ambiguous = ambiguous;
+        }
+    }
+
+    /** Test seam for the same real-node spatial selector used by the live tree walk. */
+    RecommendationTitleParser.Source selectNearbySource(
+            List<AccessibilityNodeInfo> roots, android.graphics.Rect clickBounds) {
+        NearbySource nearby = new NearbySource(clickBounds);
+        int[] budget = new int[] {256};
+        if (roots != null) {
+            for (AccessibilityNodeInfo root : roots) {
+                if (root != null) collectNearbySources(root, 0, nearby, budget);
+            }
+        }
+        return nearby.truncated || nearby.ambiguous || nearby.rejected
+                ? RecommendationTitleParser.Source.NONE : nearby.result();
+    }
+
+    /** Chooses only a unique closest card candidate; equal-distance conflicts fail closed. */
+    private static final class NearbySource {
+        final android.graphics.Rect click;
+        final android.graphics.Rect region;
+        RecommendationTitleParser.Source selected = RecommendationTitleParser.Source.NONE;
+        long bestDistance = Long.MAX_VALUE;
+        boolean ambiguous;
+        boolean truncated;
+        boolean rejected;
+
+        NearbySource(android.graphics.Rect clickBounds) {
+            click = new android.graphics.Rect(clickBounds);
+            region = new android.graphics.Rect(clickBounds);
+            region.inset(-60, -60);
+        }
+
+        void consider(RecommendationTitleParser.Source candidate, android.graphics.Rect bounds) {
+            if (candidate == null || candidate.isEmpty()) return;
+            long distance = distance(bounds, candidate.hasProvider());
+            if (distance < bestDistance) {
+                selected = candidate;
+                bestDistance = distance;
+                ambiguous = false;
+            } else if (distance == bestDistance) {
+                RecommendationTitleParser.Source merged = mergeDirectSources(selected, candidate);
+                if (merged == null || merged.isEmpty()) ambiguous = true;
+                else selected = merged;
+            }
+        }
+
+        void considerConflict(android.graphics.Rect bounds) {
+            long distance = distance(bounds, true);
+            if (distance < bestDistance) {
+                selected = RecommendationTitleParser.Source.NONE;
+                bestDistance = distance;
+                ambiguous = true;
+            } else if (distance == bestDistance) {
+                ambiguous = true;
+            }
+        }
+
+        boolean isPlausibleCardContainer(android.graphics.Rect bounds) {
+            int maxWidth = Math.max(click.width() * 4, 240);
+            int maxHeight = Math.max(click.height() * 4, 240);
+            return bounds.contains(click.centerX(), click.centerY())
+                    && bounds.width() <= maxWidth && bounds.height() <= maxHeight;
+        }
+
+        private long distance(android.graphics.Rect bounds, boolean strongEvidence) {
+            long dx = (long) bounds.centerX() - click.centerX();
+            long dy = (long) bounds.centerY() - click.centerY();
+            long centerDistance = dx * dx + dy * dy;
+            // A node containing the click centre is always stronger evidence
+            // than a merely nearby node, regardless of traversal order.
+            long containment = bounds.contains(click.centerX(), click.centerY())
+                    ? 0L : Long.MAX_VALUE / 2L;
+            // Inside one card, provider-bearing evidence from its coherent
+            // subtree outranks a bare title child and preserves whitelist policy.
+            long evidence = strongEvidence ? 0L : Long.MAX_VALUE / 4L;
+            return containment + evidence + centerDistance;
+        }
+
+        RecommendationTitleParser.Source result() {
+            return ambiguous ? RecommendationTitleParser.Source.NONE : selected;
+        }
+    }
+
     /**
-     * Walks the clicked view's ancestor chain (bounded) looking for the card's
-     * rich content description or text. Nodes are recycled immediately.
+     * Borrows the clicked root; owns and recycles only parents acquired here.
+     * The caller remains the sole owner of the root, including on exceptions.
      */
     private RecommendationTitleParser.Source cardSourceFromAncestors(AccessibilityNodeInfo root) {
         AccessibilityNodeInfo owned = root;
@@ -572,16 +1077,16 @@ public final class TvRecommendationService extends AccessibilityService {
                 RecommendationTitleParser.Source found = cardSourceFromNode(owned);
                 if (!found.isEmpty()) return found;
                 AccessibilityNodeInfo parent = owned.getParent();
-                owned.recycle();
+                if (owned != root) owned.recycle();
                 owned = parent;
                 if (owned == null) break;
             }
             return RecommendationTitleParser.Source.NONE;
         } catch (RuntimeException walkError) {
-            Log.w(TAG, "Could not read clicked card payload: " + walkError.getMessage());
+            Diagnostics.debug("Could not read clicked card payload: " + walkError.getMessage());
             return RecommendationTitleParser.Source.NONE;
         } finally {
-            if (owned != null) owned.recycle();
+            if (owned != null && owned != root) owned.recycle();
         }
     }
 
@@ -644,24 +1149,25 @@ public final class TvRecommendationService extends AccessibilityService {
     }
 
     /** Uses the launcher's stable ID, then scans only that row's live subtree. */
-    private String titleFromDetailRoot() {
+    String titleFromDetailRoot() {
         AccessibilityNodeInfo root = getRootInActiveWindow();
         if (root == null) return "";
         try {
+            if (!LAUNCHER_PACKAGE.contentEquals(toString(root.getPackageName()))) return "";
             List<AccessibilityNodeInfo> rows = root.findAccessibilityNodeInfosByViewId(DETAIL_TITLE_ID);
             if (rows == null) return "";
-            for (AccessibilityNodeInfo row : rows) {
-                if (row == null) continue;
-                try {
+            try {
+                for (AccessibilityNodeInfo row : rows) {
+                    if (row == null) continue;
                     String title = titleFromDetailRow(row);
                     if (!title.isEmpty()) return title;
-                } finally {
-                    row.recycle();
                 }
+                return "";
+            } finally {
+                for (AccessibilityNodeInfo row : rows) if (row != null) row.recycle();
             }
-            return "";
         } catch (RuntimeException error) {
-            Log.w(TAG, "Could not read entity title row: " + error.getMessage());
+            Diagnostics.debug("Could not read entity title row: " + error.getMessage());
             return "";
         } finally {
             root.recycle();
@@ -673,9 +1179,9 @@ public final class TvRecommendationService extends AccessibilityService {
         // detail method (same guards, 15-word cap) so long exact titles such
         // as the 8-word Shang-Chi title survive. General fail-closed limits
         // elsewhere are untouched.
-        String title = RecommendationTitleParser.fromDetailTitle(toString(node.getText()));
+        String title = detailLookupTitle(toString(node.getText()));
         if (!title.isEmpty()) return title;
-        title = RecommendationTitleParser.fromDetailTitle(toString(node.getContentDescription()));
+        title = detailLookupTitle(toString(node.getContentDescription()));
         if (!title.isEmpty()) return title;
         for (int index = 0; index < node.getChildCount(); index++) {
             AccessibilityNodeInfo child = node.getChild(index);
@@ -690,188 +1196,195 @@ public final class TvRecommendationService extends AccessibilityService {
         return "";
     }
 
-    /**
-     * Drops the stock YouTube background process. Runs on the worker, never on
-     * the accessibility callback thread. {@code KILL_BACKGROUND_PROCESSES} is a
-     * normal permission and cannot touch a foreground app, so this is safe at
-     * any point: it only ever removes a backgrounded stock YouTube, which is
-     * exactly the resident copy that can otherwise win the foreground back after
-     * a redirect, or that makes the launcher's own launch fast enough to beat it.
-     */
-    private void dropStockYouTube(String phase) {
-        try {
-            android.app.ActivityManager manager =
-                    (android.app.ActivityManager) getSystemService(ACTIVITY_SERVICE);
-            if (manager == null) return;
-            manager.killBackgroundProcesses(STOCK_YOUTUBE_PACKAGE);
-            Log.i(TAG, "Dropped stock YouTube background process (" + phase + ")");
-        } catch (RuntimeException killError) {
-            Log.w(TAG, "Could not drop stock YouTube (" + phase + "): "
-                    + killError.getMessage());
+    private String detailLookupTitle(String raw) {
+        RecommendationTitleParser.Source detail = RecommendationTitleParser.fromDetailTitleSource(raw);
+        if (detail.isEmpty()) return "";
+        if (detail.year.isEmpty() && hasFreshFocusedHeroSource() && !focusedHeroSource.youtube
+                && TitleResultHelper.compatibleTitles(detail.title, focusedHeroSource.lookupTitle())) {
+            return focusedHeroSource.lookupTitle();
         }
+        return detail.lookupTitle();
     }
 
     /** Routes a resolved title to the configured film/series destination. */
-    private boolean openMoviesTarget(String target, TitleMatch match) {
+    boolean openMoviesTarget(String target, TitleMatch match) {
         if (AppPrefs.MOVIES_STREMIO.equals(target)) return StremioLauncher.open(this, match);
         if (AppPrefs.MOVIES_WUPLAY.equals(target)) return WuPlayLauncher.open(this, match);
         return NuvioLauncher.open(this, match);
     }
 
-    /** The deep link the selected destination will be given, for the log line only. */
-    private static String moviesTargetUri(String target, TitleMatch match) {
-        if (AppPrefs.MOVIES_STREMIO.equals(target)) return TitleResultHelper.stremioUri(match);
-        if (AppPrefs.MOVIES_WUPLAY.equals(target)) return TitleResultHelper.wuplayUri(match);
-        return TitleResultHelper.nuvioUri(match);
+    boolean openYouTubeTarget(String title) { return YouTubeLauncher.open(this, title); }
+
+    TitleMatch lookupTitle(String key, String title) throws java.io.IOException {
+        return new TmdbClient(key).searchBest(title);
     }
 
-    private void dispatchTitle(String title, boolean youtube) {
-        dispatchTitle(title, youtube, "");
+    void showRedirectBadge() { RedirectBadge.show(this); }
+
+    /** Called on the main thread immediately before a launch, including reasserts. */
+    private boolean canLaunch(long generation, String provider) {
+        return interactionSession.isCurrent(generation) && !isWhitelistedProvider(provider);
     }
 
     private void dispatchTitle(String title, boolean youtube, String provider) {
-        String cleaned = youtube
-                ? RecommendationTitleParser.youtubeSource(title).title
-                : RecommendationTitleParser.fromDirectText(title);
-        if (cleaned.isEmpty() && !youtube) {
-            cleaned = RecommendationTitleParser.fromDescription(title);
+        RecommendationTitleParser.Source parsed = youtube
+                ? RecommendationTitleParser.youtubeSource(title)
+                : RecommendationTitleParser.fromDetailTitleSource(title);
+        if (parsed.isEmpty()) return;
+        String candidateQuery = parsed.lookupTitle();
+        boolean sameSelection = selectedGeneration == interactionSession.ticket()
+                && youtube == selectedYoutube
+                && TitleResultHelper.compatibleTitles(selectedTitle, candidateQuery);
+        // Use retained year evidence for the actual lookup and duplicate/cancel
+        // identity, not just for provider matching. A bare detail row supplies
+        // no evidence that the user selected a different remake.
+        final String query = sameSelection && parsed.year.isEmpty() ? selectedTitle : candidateQuery;
+        // Detail callbacks can omit the provider long after the duplicate window
+        // has expired. Keep the selected card's policy on those callbacks, but
+        // never carry it across a new selection or a different title/route.
+        final String currentProvider = provider.isEmpty() && sameSelection ? selectedProvider : provider;
+        long now = SystemClock.elapsedRealtime();
+        // A new entity, an explicit year refining a bare title, or newly supplied
+        // provider evidence supersedes work that captured the older context.
+        // Invalidate before a whitelist return or duplicate check: otherwise an
+        // already queued launch/error can still act on that obsolete snapshot.
+        if (!lastDispatchedTitle.isEmpty() && lastDispatchedGeneration == interactionSession.ticket()
+                && (!TitleResultHelper.matchKey(lastDispatchedTitle).equals(TitleResultHelper.matchKey(query))
+                    || youtube != lastDispatchedYoutube
+                    || !currentProvider.equals(selectedProvider))) {
+            interactionSession.invalidate();
+            clearDivert();
         }
-        if (cleaned.isEmpty() && !youtube) {
-            // Authoritative detail-row titles allow up to 15 words with the
-            // same guards; re-validate here so an exact detail title (e.g. the
-            // 8-word Shang-Chi title) survives dispatch. Inputs are already
-            // parsed titles, so general fail-closed limits stay intact.
-            cleaned = RecommendationTitleParser.fromDetailTitle(title);
+        selectedTitle = query;
+        selectedProvider = currentProvider;
+        selectedYoutube = youtube;
+        selectedGeneration = interactionSession.ticket();
+        if (youtube) {
+            // Resolving a usable title consumes the click even if the target is
+            // missing, throws, or changes before launch. Only success below may
+            // arm a reassert; a later stock window must not retry a failed click.
+            lastLauncherClickAt = 0L;
+            clearLastCardSource();
+            clearFocusedHeroSource();
         }
-        if (cleaned.isEmpty()) return;
-        long now = System.currentTimeMillis();
-        if (isWhitelistedProvider(provider)) {
-            // Whitelisted providers keep normal Google TV behaviour: no redirect,
-            // no badge, no TMDB lookup. The bypass is recorded apart from the
-            // dispatch bookkeeping below so the immediate providerless
-            // EntityActivity fallback for the same title is suppressed without
-            // ever blocking an explicit provider-carrying click.
-            Log.i(TAG, "Whitelisted provider bypass: " + provider + " for " + cleaned);
-            lastBypassedTitle = cleaned;
+        if (isWhitelistedProvider(currentProvider)) {
+            clearDivert();
+            lastBypassedTitle = selectedTitle;
             lastBypassedYoutube = youtube;
             lastBypassedAt = now;
+            lastBypassedGeneration = interactionSession.ticket();
             return;
         }
-        if (DispatchPolicy.shouldSuppressProviderlessFallback(
+        if (lastBypassedGeneration == interactionSession.ticket()
+                && DispatchPolicy.shouldSuppressProviderlessFallback(
                 lastBypassedTitle, lastBypassedYoutube, lastBypassedAt,
-                cleaned, youtube, provider, now, DUPLICATE_WINDOW_MS)) {
-            Log.i(TAG, "Suppressed providerless fallback after whitelisted bypass: " + cleaned);
-            return;
-        }
-        if (TitleResultHelper.normalizedTitleMatches(lastDispatchedTitle, cleaned)
+                query, youtube, currentProvider, now, DUPLICATE_WINDOW_MS)) return;
+        long generation = interactionSession.ticket();
+        if (generation == lastDispatchedGeneration
+                && TitleResultHelper.matchKey(lastDispatchedTitle).equals(TitleResultHelper.matchKey(query))
                 && youtube == lastDispatchedYoutube
                 && now - lastDispatchedAt < DUPLICATE_WINDOW_MS) return;
-        lastDispatchedTitle = cleaned;
+        lastDispatchedTitle = query;
         lastDispatchedYoutube = youtube;
         lastDispatchedAt = now;
-        Log.i(TAG, "Google TV recommendation title: " + cleaned
-                + (youtube ? " (YouTube)" : ""));
-        final String resolvedTitle = cleaned;
-        worker.execute(() -> resolveAndOpen(resolvedTitle, youtube));
+        lastDispatchedGeneration = generation;
+        Diagnostics.debug("Recommendation: " + query);
+        worker.execute(() -> resolveAndOpen(query, youtube, currentProvider, generation));
     }
 
-    private void resolveAndOpen(String title, boolean youtube) {
-        // Launcher app tiles read like single-word titles; fail closed. This
-        // runs on the worker (not the accessibility callback) and the label
-        // set is warmed on connect, so the first redirect never blocks event
-        // delivery on a PackageManager enumeration.
-        if (matchesInstalledAppLabel(title)) {
-            Log.i(TAG, "Rejected launcher app tile label: " + title);
-            return;
-        }
+    private void resolveAndOpen(String title, boolean youtube, String provider, long generation) {
+        if (!interactionSession.isCurrent(generation)) return;
+        if (matchesInstalledAppLabel(TitleResultHelper.cleanTitle(title))) return;
         if (youtube) {
-            // YouTube cards search by title; no TMDB lookup or key is needed.
-            // The launcher starts its own copy of stock YouTube for these cards,
-            // so drop any resident instance on both sides of the redirect: the
-            // one before it is still backgrounded and forces the launcher's own
-            // launch to cold-start, and the one after it is the launcher's copy,
-            // now backgrounded by this redirect and no longer able to take the
-            // foreground back.
-            dropStockYouTube("before redirect");
-            if (YouTubeLauncher.open(this, title)) {
-                dropStockYouTube("after redirect");
-                RedirectBadge.show(this);
-            }
+            String target = AppPrefs.youtubeTarget(this);
+            handler.post(() -> {
+                if (!canLaunch(generation, provider) || !target.equals(AppPrefs.youtubeTarget(this))) return;
+                try {
+                    if (openYouTubeTarget(title)) {
+                        noteDiverted(title, target, generation);
+                        showRedirectBadge();
+                    }
+                } catch (RuntimeException error) {
+                    notifyUser(R.string.status_redirect_failed);
+                }
+            });
             return;
         }
-        // One prefs read per click: the TMDB key and the film/series target come
-        // from the same snapshot instead of two separate getSharedPreferences calls.
         android.content.SharedPreferences prefs = getSharedPreferences(AppPrefs.PREFS, MODE_PRIVATE);
         String key = prefs.getString(AppPrefs.TMDB_KEY, "").trim();
+        String target = AppPrefs.moviesTarget(this);
         if (key.length() < 10) {
-            Log.w(TAG, "TMDB key missing or too short; configure GTV2STREAM first");
-            notifyUser(R.string.status_key_missing);
+            notifyCurrent(generation, provider, R.string.status_key_missing);
             return;
         }
         try {
-            String moviesTarget = LaunchPolicy.moviesTarget(
-                    prefs.getString(AppPrefs.TARGET_MOVIES, AppPrefs.MOVIES_NUVIO));
-            // Repeated selections reuse the recent match instead of re-querying TMDB.
-            // Recent misses fail closed fast without a second network lookup.
             if (MatchCache.isMiss(title)) {
-                Log.i(TAG, "Cached TMDB miss reused for: " + title);
+                notifyCurrent(generation, provider, R.string.status_no_match);
                 return;
             }
             TitleMatch match = MatchCache.get(title);
             if (match == null) {
-                match = new TmdbClient(key).searchBest(title);
+                match = lookupTitle(key, title);
+                if (!interactionSession.isCurrent(generation)) return;
                 if (match == null) {
-                    Log.i(TAG, "No TMDB movie or series match for: " + title);
                     MatchCache.putMiss(title);
+                    notifyCurrent(generation, provider, R.string.status_no_match);
                     return;
                 }
                 MatchCache.put(title, match);
-            } else {
-                Log.i(TAG, "Cached TMDB match reused for: " + title);
             }
-            boolean opened = openMoviesTarget(moviesTarget, match);
-            Log.i(TAG, "TMDB match: " + match.title + " -> "
-                    + moviesTargetUri(moviesTarget, match));
-            if (opened) {
-                RedirectBadge.show(this);
-            }
+            final TitleMatch resolved = match;
+            handler.post(() -> {
+                if (!canLaunch(generation, provider) || !target.equals(AppPrefs.moviesTarget(this))) return;
+                try {
+                    if (openMoviesTarget(target, resolved)) showRedirectBadge();
+                } catch (RuntimeException error) {
+                    notifyUser(R.string.status_redirect_failed);
+                }
+            });
         } catch (TmdbClient.InvalidApiKeyException error) {
-            Log.w(TAG, "TMDB rejected the configured key");
-            notifyUser(R.string.key_rejected);
+            if (key.equals(prefs.getString(AppPrefs.TMDB_KEY, "").trim())) {
+                notifyCurrent(generation, provider, R.string.key_rejected);
+            }
+        } catch (java.net.SocketTimeoutException error) {
+            notifyCurrent(generation, provider, R.string.status_lookup_timeout);
         } catch (Exception error) {
-            Log.w(TAG, "Recommendation lookup failed: " + error.getMessage());
+            // Do not log exception messages: transport errors can contain URLs
+            // with title queries or the user's TMDB credential.
+            notifyCurrent(generation, provider, R.string.status_lookup_failed);
         }
     }
 
-    private void collectWindowTexts(AccessibilityWindowInfo window, List<String> out) {
-        AccessibilityNodeInfo root = window.getRoot();
-        if (root == null) return;
-        try {
-            java.util.LinkedHashSet<String> seen = new java.util.LinkedHashSet<>();
-            collectNodeTexts(root, 0, seen);
-            out.addAll(seen);
-        } finally {
-            root.recycle();
-        }
+    private void notifyCurrent(long generation, String provider, int message) {
+        handler.post(() -> {
+            if (canLaunch(generation, provider)) notifyUser(message);
+        });
     }
 
     private void collectNodeTexts(AccessibilityNodeInfo node, int depth,
             java.util.LinkedHashSet<String> out) {
-        if (node == null || depth > 12 || out.size() > 100) return;
+        collectNodeTexts(node, depth, out, new int[] {256});
+    }
+
+    private void collectNodeTexts(AccessibilityNodeInfo node, int depth,
+            java.util.LinkedHashSet<String> out, int[] budget) {
+        if (node == null || depth > 12 || out.size() > 100 || budget[0]-- <= 0
+                || !node.isVisibleToUser()) return;
         String text = toString(node.getText());
         if (!text.isEmpty() && out.size() <= 100) {
-            out.add((text.length() > 200 ? text.substring(0, 300) : text)
+            out.add(text.substring(0, Math.min(text.length(), 300))
                     + "@y=" + boundsTop(node));
         }
         String description = toString(node.getContentDescription());
         if (!description.isEmpty() && out.size() <= 100) {
-            out.add("[desc]" + description + "@y=" + boundsTop(node));
+            out.add("[desc]" + description.substring(0, Math.min(description.length(), 300))
+                    + "@y=" + boundsTop(node));
         }
         for (int index = 0; index < node.getChildCount() && out.size() <= 100; index++) {
             AccessibilityNodeInfo child = node.getChild(index);
             if (child == null) continue;
             try {
-                collectNodeTexts(child, depth + 1, out);
+                collectNodeTexts(child, depth + 1, out, budget);
             } finally {
                 child.recycle();
             }
@@ -890,16 +1403,30 @@ public final class TvRecommendationService extends AccessibilityService {
 
     /** YouTube cards expose their title and provider in the hero panel. */
     private RecommendationTitleParser.Source sourceFromWindowPayloads() {
-        List<String> entries = new ArrayList<>();
-        List<AccessibilityWindowInfo> windows = getWindows();
-        if (windows == null) return RecommendationTitleParser.Source.NONE;
-        try {
-            for (AccessibilityWindowInfo window : windows) {
-                collectWindowTexts(window, entries);
-            }
-        } catch (RuntimeException error) {
-            Log.w(TAG, "Could not read window payload: " + error.getMessage());
+        RecommendationTitleParser.Source source = readWindowSource();
+        if (!focusedTitle.isEmpty() && !source.isEmpty()
+                && !TitleResultHelper.compatibleTitles(focusedTitle, source.lookupTitle())) {
             return RecommendationTitleParser.Source.NONE;
+        }
+        return source;
+    }
+
+    RecommendationTitleParser.Source readWindowSource() {
+        if (interactionSession.isEditing()) return RecommendationTitleParser.Source.NONE;
+        List<String> entries = new ArrayList<>();
+        AccessibilityNodeInfo root = getRootInActiveWindow();
+        if (root == null) return RecommendationTitleParser.Source.NONE;
+        try {
+            if (!LAUNCHER_PACKAGE.contentEquals(toString(root.getPackageName()))) {
+                return RecommendationTitleParser.Source.NONE;
+            }
+            java.util.LinkedHashSet<String> seen = new java.util.LinkedHashSet<>();
+            collectNodeTexts(root, 0, seen);
+            entries.addAll(seen);
+        } catch (RuntimeException error) {
+            return RecommendationTitleParser.Source.NONE;
+        } finally {
+            root.recycle();
         }
 
         int youtubeTop = -1;
@@ -944,12 +1471,13 @@ public final class TvRecommendationService extends AccessibilityService {
     }
 
     private void logRejectedPayload(AccessibilityEvent event) {
+        if (!BuildConfig.DEBUG) return;
         String text = String.join(" | ", event.getText() == null
-                ? List.of() : event.getText());
+                ? java.util.Collections.emptyList() : event.getText());
         String description = toString(event.getContentDescription());
-        String payload = !text.isBlank() ? text : description;
+        String payload = !text.trim().isEmpty() ? text : description;
         String extra = "";
-        AccessibilityNodeInfo source = event.getSource();
+        AccessibilityNodeInfo source = eventSource(event);
         if (source != null) {
             try {
                 extra = " (view=" + source.getViewIdResourceName()
@@ -958,18 +1486,22 @@ public final class TvRecommendationService extends AccessibilityService {
                 source.recycle();
             }
         }
-        if (payload.isBlank()) {
-            if (!extra.isBlank()) {
-                Log.i(TAG, "No credible title in launcher payload:" + extra);
+        if (payload.trim().isEmpty()) {
+            if (!extra.trim().isEmpty()) {
+                Diagnostics.debug("No credible title in launcher payload:" + extra);
             }
             return;
         }
         if (payload.length() > 300) payload = payload.substring(0, 300) + "…";
-        Log.i(TAG, "No credible title in launcher payload: " + payload + extra);
+        Diagnostics.debug("No credible title in launcher payload: " + payload + extra);
     }
 
-    private void notifyUser(int message) {
-        handler.post(() -> Toast.makeText(this, message, Toast.LENGTH_LONG).show());
+    void notifyUser(int message) {
+        if (Looper.myLooper() == Looper.getMainLooper()) {
+            Toast.makeText(this, message, Toast.LENGTH_LONG).show();
+        } else {
+            handler.post(() -> Toast.makeText(this, message, Toast.LENGTH_LONG).show());
+        }
     }
 
     /**
@@ -985,7 +1517,8 @@ public final class TvRecommendationService extends AccessibilityService {
         try {
             return ProviderWhitelist.contains(AppPrefs.whitelist(this), id);
         } catch (RuntimeException prefsError) {
-            return false;
+            // An unreadable policy is not authorisation to redirect this provider.
+            return true;
         }
     }
     /** True when the title exactly matches an installed app's display label. */
@@ -1007,8 +1540,6 @@ public final class TvRecommendationService extends AccessibilityService {
      */
     private Set<String> loadInstalledAppLabels() {
         try {
-            Set<String> labels = installedAppLabels;
-            if (labels != null) return labels;
             Set<String> loaded = new HashSet<>();
             PackageManager packageManager = getPackageManager();
             List<android.content.pm.ApplicationInfo> apps =
@@ -1016,6 +1547,17 @@ public final class TvRecommendationService extends AccessibilityService {
             java.util.List<String> raw = new java.util.ArrayList<>(apps.size());
             for (android.content.pm.ApplicationInfo app : apps) {
                 raw.add(String.valueOf(packageManager.getApplicationLabel(app)));
+            }
+            // The tile can use an activity/alias label instead of the app label
+            // (e.g. a file manager's launcher name). Both launcher categories
+            // have matching visibility declarations in AndroidManifest.xml.
+            for (String category : new String[] {
+                    Intent.CATEGORY_LEANBACK_LAUNCHER, Intent.CATEGORY_LAUNCHER }) {
+                Intent intent = new Intent(Intent.ACTION_MAIN).addCategory(category);
+                for (android.content.pm.ResolveInfo activity
+                        : packageManager.queryIntentActivities(intent, 0)) {
+                    raw.add(String.valueOf(activity.loadLabel(packageManager)));
+                }
             }
             loaded.addAll(AppLabelPolicy.normalizeAll(raw));
             installedAppLabels = loaded;
@@ -1049,6 +1591,7 @@ public final class TvRecommendationService extends AccessibilityService {
     @Override public void onInterrupt() { }
 
     @Override public void onDestroy() {
+        interactionSession.invalidate();
         heartbeatHandler.removeCallbacks(heartbeat);
         if (pendingHeroCapture != null) handler.removeCallbacks(pendingHeroCapture);
         getSharedPreferences(AppPrefs.PREFS, MODE_PRIVATE).edit()
